# rust_trivia_game

./: Cargo.toml  README.md  client
src/: client.rs  lib.rs  server.rs
